# libotr-otr

./: ChangeLog  Makefile.am  bootstrap  configure.ac
